--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <title>ALURAFLIX </title>
 </head>
 
-<body>
+<body>]
+  <header>AULURAFLIX</header>
   <section>
-    <div>
-      <header>AULURAFLIX</header>
+    <div class="chamada-texto">
       <h1>os incriveis 2</h1>
+      <p>misterio da familia </p>
     </div>
     <div>
 
-      <p>misterio da familia </p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/iEOlT1Xj5Q0?si=B-8RRVl8ARmutdG1"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
